pianoroll bar cropping

--- a/papers/progress/alex/progress-alex.bib
+++ b/papers/progress/alex/progress-alex.bib
@@ -3,7 +3,7 @@
   pages     = {10},
   booktitle = {Proceedings of the35th International Conference on Machine Learning},
   author    = {Roberts, Adam and Engel, Jesse and Raffel, Colin and Hawthorne, Curtis and Eck, Douglas},
-  date      = {2018},
+  year      = {2018},
   langid    = {english},
   file      = {Roberts et al. - A Hierarchical Latent Vector Model for Learning Lo.pdf:C\:\\Users\\jekyllo\\Zotero\\storage\\ZJ2JDLW8\\Roberts et al. - A Hierarchical Latent Vector Model for Learning Lo.pdf:application/pdf}
 }
@@ -31,6 +31,7 @@
   author       = {Oord, Aaron van den and Dieleman, Sander and Zen, Heiga and Simonyan, Karen and Vinyals, Oriol and Graves, Alex and Kalchbrenner, Nal and Senior, Andrew and Kavukcuoglu, Koray},
   urldate      = {2021-04-05},
   date         = {2016-09-19},
+  year         = {2016},
   eprinttype   = {arxiv},
   eprint       = {1609.03499},
   keywords     = {Computer Science - Machine Learning, Computer Science - Sound},
@@ -46,6 +47,7 @@
   author       = {Mehri, Soroush and Kumar, Kundan and Gulrajani, Ishaan and Kumar, Rithesh and Jain, Shubham and Sotelo, Jose and Courville, Aaron and Bengio, Yoshua},
   urldate      = {2021-04-19},
   date         = {2017-02-11},
+  year         = {2017},
   eprinttype   = {arxiv},
   eprint       = {1612.07837},
   keywords     = {Computer Science - Artificial Intelligence, Computer Science - Sound},
@@ -101,7 +103,7 @@
   author        = {Kristy Choi AND Curtis Hawthorne AND Ian Simon AND Monica
                   Dinculescu AND Jesse Engel},
   title         = {{Encoding Musical Style with Transformer Autoencoders}},
-  year          = 2019,
+  year          = {2019},
   archiveprefix = {arXiv},
   eprint        = {1912.05537v2},
   primaryclass  = {cs.SD}
@@ -131,6 +133,7 @@
   author       = {Yang, Li-Chia and Lerch, Alexander},
   urldate      = {2021-04-25},
   date         = {2020-05},
+  year         = {2020},
   langid       = {english},
   file         = {Yang and Lerch - 2020 - On the evaluation of generative models in music.pdf:/home/alex/Zotero/storage/9WDAQXR3/Yang and Lerch - 2020 - On the evaluation of generative models in music.pdf:application/pdf}
 }
@@ -142,4 +145,31 @@
   eprint        = {1709.06298},
   archiveprefix = {arXiv},
   primaryclass  = {eess.AS}
+}
+
+@article{oore_this_2018,
+  title        = {This Time with Feeling: Learning Expressive Musical Performance},
+  url          = {http://arxiv.org/abs/1808.03715},
+  shorttitle   = {This Time with Feeling},
+  abstract     = {Music generation has generally been focused on either creating scores or interpreting them. We discuss differences between these two problems and propose that, in fact, it may be valuable to work in the space of direct \${\textbackslash}it performance\$ generation: jointly predicting the notes \${\textbackslash}it and\$ \${\textbackslash}it also\$ their expressive timing and dynamics. We consider the significance and qualities of the data set needed for this. Having identified both a problem domain and characteristics of an appropriate data set, we show an {LSTM}-based recurrent network model that subjectively performs quite well on this task. Critically, we provide generated examples. We also include feedback from professional composers and musicians about some of these examples.},
+  journaltitle = {{arXiv}:1808.03715 [cs, eess]},
+  author       = {Oore, Sageev and Simon, Ian and Dieleman, Sander and Eck, Douglas and Simonyan, Karen},
+  urldate      = {2021-04-26},
+  date         = {2018-08-10},
+  year         = {2018},
+  eprinttype   = {arxiv},
+  eprint       = {1808.03715},
+  keywords     = {Computer Science - Machine Learning, Computer Science - Sound, Electrical Engineering and Systems Science - Audio and Speech Processing},
+  file         = {arXiv Fulltext PDF:C\:\\Users\\jekyllo\\Zotero\\storage\\IH9TKCUJ\\Oore et al. - 2018 - This Time with Feeling Learning Expressive Musica.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\jekyllo\\Zotero\\storage\\SKNKH8PB\\1808.html:text/html}
+}
+
+@thesis{raffel_learning-based_2016,
+  title       = {Learning-Based Methods for Comparing Sequences, with Applications to Audio-to-{MIDI} Alignment and Matching},
+  institution = {Columbia University},
+  type        = {phdthesis},
+  author      = {Raffel, Colin},
+  date        = {2016},
+  year        = {2016},
+  langid      = {english},
+  file        = {Raffel - Learning-Based Methods for Comparing Sequences, wi.pdf:C\:\\Users\\jekyllo\\Zotero\\storage\\C8X3GN4K\\Raffel - Learning-Based Methods for Comparing Sequences, wi.pdf:application/pdf}
 }
