progress paper work

--- a/papers/progress/alex/progress-alex.bib
+++ b/papers/progress/alex/progress-alex.bib
@@ -173,3 +173,30 @@
   langid      = {english},
   file        = {Raffel - Learning-Based Methods for Comparing Sequences, wi.pdf:C\:\\Users\\jekyllo\\Zotero\\storage\\C8X3GN4K\\Raffel - Learning-Based Methods for Comparing Sequences, wi.pdf:application/pdf}
 }
+
+
+@misc{thickstun2017learning,
+      title={Learning Features of Music from Scratch},
+      author={John Thickstun and Zaid Harchaoui and Sham Kakade},
+      year={2017},
+      eprint={1611.09827},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{dong_pypianoroll_2018,
+	title = {Pypianoroll: Open Source Python Package for Handling Multitrack Pianoroll},
+	abstract = {The pianoroll representation represents music data as timepitch matrices. Although it has been used widely as a way to visualize music data, it has not been much used in computational modeling of music. To promote its usage, we present in this paper a new, open source Python package called Pypianoroll for handling multitrack pianorolls. The core element of Pypianoroll is a new, lightweight multitrack pianoroll format that contains additional tempo and program information along with the pianoroll matrices. It provides tools for creating, manipulating, storing, analyzing and visualizing multitrack pianorolls in an intuitive way. Code and documentation are available at https: //github.com/salu133445/pypianoroll.},
+	pages = {2},
+	author = {Dong, Hao-Wen and Hsiao, Wen-Yi},
+	langid = {english},
+	year = {2018},
+	file = {Dong and Hsiao - Pypianoroll Open Source Python Package for Handli.pdf:/home/alex/Zotero/storage/4X5RN6FL/Dong and Hsiao - Pypianoroll Open Source Python Package for Handli.pdf:application/pdf},
+}
+
+@article{raffel_pretty_midi_2014,
+        year = {2018},
+	title = {Intuitive Analysis, Creation and Manipulation of MIDI Data With pretty\_midi},
+	author = {Raffel, Colin and Ellis, Daniel P.W.},
+	pages = {2},
+}
