add pianoroll to numpy function

--- a/papers/progress/alex/progress-alex.tex
+++ b/papers/progress/alex/progress-alex.tex
@@ -183,7 +183,7 @@ crop songs into phrases of equal numbers of measures to use as
 training data.
 
 The result of this preprocessing is that each training example will be
-a 3D tensor of shape (tracks x notes x ticks) and stacking the
+a 3D tensor of shape (tracks x ticks x pitches) and stacking the
 training examples will produce a 4D tensor.
 
 \begin{figure}[h]
